--- a/ld/po/BLD-POTFILES.in
+++ b/ld/po/BLD-POTFILES.in
@@ -1,5 +1,7 @@
 eaarch64cloudabi.c
 eaarch64cloudabib.c
+eaarch64hermit.c
+eaarch64hermitb.c
 eaarch64elf.c
 eaarch64elf32.c
 eaarch64elf32b.c
@@ -203,6 +205,7 @@ eelf_l1om_fbsd.c
 eelf_s390.c
 eelf_x86_64.c
 eelf_x86_64_cloudabi.c
+eelf_x86_64_hermit.c
 eelf_x86_64_fbsd.c
 eelf_x86_64_nacl.c
 eelf_x86_64_sol2.c
